# hasher-Sum32-CRC32

./: CMakeLists.txt  readme.md
scr/: main.cpp
scr/applib/: app.cpp  app.h
scr/hashlib/: hash.cpp  hash.h
scr/tests/: hash_unittests.cpp
